--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.datasource.primary.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.secondary.driver-class-name=com.mysql.cj.jdbc.Driver
 ##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
-spring.datasource.secondary.url=jdbc:oracle:thin:@192.168.4.5:1535/test2
-spring.datasource.secondary.username=apps
-spring.datasource.secondary.password=apps
+spring.datasource.secondary.url=jdbc:oracle:thin:@127.0.0.1:1535/test2
+spring.datasource.secondary.username=test
+spring.datasource.secondary.password=test
 spring.datasource.secondary.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.datasource.hikari.debug=true
