--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 			<version>2.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
