add mail sender endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,18 @@ spring.datasource.secondary.username=apps
 spring.datasource.secondary.password=apps
 spring.datasource.secondary.driver-class-name=oracle.jdbc.OracleDriver
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mizaby19@gmail.com
+spring.mail.password=Miz@@777
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
+
+
 spring.datasource.hikari.debug=true
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 logging.level.org.springframework.web=DEBUG
