--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.datasource.secondary.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mizaby19@gmail.com
-spring.mail.password=Miz@@777
+spring.mail.username=${email_address}
+spring.mail.password=${PASS_19}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
